# ocpt

./: .gitignore  Cargo.toml  README.md  imp_info.txt
ddfg-diagrams/: ddfg_ContainerLogistics.json  ddfg_age_of_empires_ocel2.json  ddfg_ocel2-p2p.json  ddfg_order-management.json  dfg_ContainerLogistics.json  dfg_github_pm4py.json  dfg_o2c.json  dfg_ocel2-p2p.json  dfg_order-management.json  dfg_recruiting.json  dfg_running.json  dfg_v1.json  dfg_v2.json  dfg_v3.json  dfg_v4.json  dfg_v6.json  dfg_v8.json
dfs-diagrams/: dfg_github_pm4py.json  dfg_o2c.json  dfg_p2p.json  dfg_running_filtered.json  dfg_v3.json  dfg_v5.json  dfg_windows_events.json
src/: add_self_loops.rs  best_exclusive_cut.rs  best_parallel_cut.rs  best_parallel_cut_exhaustive.rs  best_parallel_cut_v2.rs  best_parallel_cut_v3.rs  best_parallel_cut_v4.rs  best_redo_cuts.rs  best_sequence_cut.rs  best_sequence_cut_v2.rs  build_relations_fns.rs  conformance_checking.rs  conformance_checking_mine.rs  conformance_checking_r4pm.rs  conformance_format.rs  conformance_types.rs  cost_to_add.rs  cost_to_add_curve_fitting1.rs  cost_to_add_curve_fitting_uni.rs  cost_to_cut.rs  divergence_free_dfg.rs  format_conversion.rs  get_dfg_by_object_type.rs  good_cuts.rs  interaction_patterns.rs  main.rs  modify_node_helper_fns.rs  server.rs  start_cuts.rs  start_cuts_opti_v1.rs  start_cuts_opti_v2.rs  types.rs
