[package]
name = "dfg_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10.4"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
itertools = "0.14.0"
tower-http = { version = "0.5.2", features = ["cors"] }
log = "0.4"
simplelog = "0.12"
rustworkx-core = "0.14.2"
petgraph = "0.6.5"