[package]
name = "dfg_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10.4"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
itertools = "0.14.0"
tower-http = { version = "0.5.2", features = ["cors", "limit"] }
log = "0.4"
simplelog = "0.12"
rustworkx-core = "0.14.2"
petgraph = "0.6.5"
rand = "0.8"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
plotters = "0.3.6"
process_mining = "0.4.0"